# our-favorite-space

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
our_favorite_space/: manage.py  pytest.ini
our_favorite_space/company/: tests.py
our_favorite_space/company/domain/: company.py
our_favorite_space/company/ports/: inbound_port.py  outbound_port.py
our_favorite_space/company/usecase/: manage.py
our_favorite_space/message/domain/: message.py
our_favorite_space/message/usecase/: manage.py
our_favorite_space/message/vo/: type.py
our_favorite_space/our_favorite_space/: asgi.py  settings.py  urls.py  wsgi.py
our_favorite_space/rating/domain/: rating.py
our_favorite_space/rating/usecase/: manage.py
our_favorite_space/rating/vo/: comment.py
our_favorite_space/space/domain/: space.py
our_favorite_space/space/usecase/: manage.py
our_favorite_space/space/vo/: type.py
our_favorite_space/users/domain/: type.py  user.py
our_favorite_space/users/ports/: inbound_port.py  outbound_port.py
our_favorite_space/users/usecase/: command.py  manage.py
our_favorite_space/users/vo/: type.py
