[tool.poetry]
name = "our-favorite-space"
version = "0.1.0"
description = ""
authors = ["Dongyeon1201 <dongyeon1201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
