[tool.poetry]
name = "our-favorite-space"
version = "0.1.0"
description = ""
authors = ["Dongyeon1201 <dongyeon1201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.15"
djangorestframework = "^3.15.2"
black = "^24.8.0"
isort = "^5.13.2"
pycln = "^2.4.0"
pre-commit = "^3.8.0"
pydantic = "^2.8.2"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
